fix column gap bug in firefox

--- a/src/styles/phb-overrides.css
+++ b/src/styles/phb-overrides.css
@@ -1,6 +1,7 @@
 .phb-overrides.phb {
   column-width: unset;
   column-count: unset;
+  column-gap: unset;
   width: 100%;
   height: 100%;
   -webkit-column-width: unset;
